@@ -1,5 +1,6 @@
 2003-09-25  IKEBE Tomohiro  <ikebe@edge.co.jp>
 
+	* added Date::Simple MixIn interface. (Tatsuhiko Miyagawa)
 	* modified equinox algorithm (based on Ruby's holiday.rb)
 
 2003-09-16  IKEBE Tomohiro  <ikebe@edge.co.jp>
